fixed block constructor document tabs z-index

--- a/assets/components/document-tabs/editor.scss
+++ b/assets/components/document-tabs/editor.scss
@@ -10,6 +10,7 @@
 		display: flex;
 		margin-bottom: -1px;
 		background-color: #fff;
+		z-index: 2;
 	}
 }
 
